--- a/templates/profile.html
+++ b/templates/profile.html
@@ -45,7 +45,10 @@ Description:  Profile page
   margin: 150px 0;
   position: fixed;
   box-shadow: 0 0 12px 0 #333;
-  z-index:999999;   
+  z-index:999999;  
+   border-radius: 0 15px 15px 0; 
+  border: 2px solid #008cc9; 
+  border-left: none; 
 }
 
 #contact-button { 
