--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,6 +8,28 @@ Description:  Profile page
 <link rel="stylesheet" type="text/css" href="public/carouselengine/initcarousel-1.css">
 <script src="public/carouselengine/initcarousel-1.js"></script>
 <style>
+.carousel-control .glyphicon-chevron-right, .carousel-control .icon-next { 
+    margin-right: 150px !important;
+  }
+
+  p{font-size: 14px !important; color: #666 !important; margin:0px; }
+  @media only screen and (min-device-width:768px) and (max-device-width:1024px) and (orientation:portrait) {
+    .carousel-control .glyphicon-chevron-left, .carousel-control .icon-prev {
+    left: 50%!important;
+    margin-left: -50px!important;
+}
+  }
+
+@media only screen and (min-device-width:320px) and (max-device-width:558px) and (orientation:portrait) {
+  .carousel-control .glyphicon-chevron-left, .carousel-control .icon-prev {
+    left: 100%!important;
+    margin-left: -180px!important;
+}
+.carousel-control .glyphicon-chevron-right, .carousel-control .icon-next {
+    margin-right: -8px !important;
+
+  }
+}
 .pro_bar
 {
   width:25%;background-color: #ccc!important;text-align:center;color:#fff;
