--- a/templates/appHome.html
+++ b/templates/appHome.html
@@ -4,8 +4,85 @@
   .modal-sm{
      top:25% !important;
   }
+  .arrow-right {
+  width: 0; 
+  height: 0; 
+  border-top: 30px solid transparent;
+  border-bottom: 30px solid transparent;
+  
+  border-left: 30px solid #c7cbea;
+}
+.arrow-right1 {
+  width: 0; 
+  height: 0; 
+  border-top: 30px solid transparent;
+  border-bottom: 30px solid transparent;  
+  border-left: 30px solid #fcdeb1;
+}
 </style>
 <!-- About Section -->
+
+<section class="container content-section">
+  <div class="panel panel-primary" style="margin-bottom: 0px !important;">
+    <div class="panel-heading"  style="background-color: #008cc9 !important;">PROFILE INSIGHTS</div>
+    <div class="panel-body" style="padding: 30px 15px 0px 15px;">
+      <div class="col-lg-4 col-md-4 text-center" >
+       <div >
+        <div class="progress blue">
+          <span class="progress-left">
+            <span class="progress-bar"></span>
+          </span>
+          <span class="progress-right">
+            <span class="progress-bar"></span>
+          </span>
+          <div class="progress-value">{{percentage}}% </div>
+        </div> 
+      </div>   
+       <div style="margin-top: 10px; margin-bottom: 30px;"><b>PROFILE COMPLETE</b>
+        <br>Update your profile to <br>increase your score.
+      </div>   
+    </div>
+
+
+    <div class="col-lg-4 col-md-4 text-center" >
+     <div>
+      <div class="progress blue">
+        <span class="progress-left">
+          <span class="progress-bar"></span>
+        </span>
+        <span class="progress-right">
+          <span class="progress-bar"></span>
+        </span>
+        <div class="progress-value">20% </div>
+      </div> 
+    </div> 
+    <div style="margin-top: 10px; margin-bottom: 30px;"><b>VIEWED BY RECRUITER</b>
+      <br>Update your profile to <br>increase your score.
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-4 text-center" >
+   <div  >
+    <div class="progress blue" align="center">
+      <span class="progress-left">
+        <span class="progress-bar"></span>
+      </span>
+      <span class="progress-right">
+        <span class="progress-bar"></span>
+      </span>
+      <div class="progress-value">10% </div>
+    </div> 
+  </div> 
+  <div style="margin-top: 10px; margin-bottom: 30px;"><b>JOBS APPLIED</b>
+    <br>Update your profile to <br>increase your score.
+  </div>
+
+</div>
+
+</div>
+</div>
+
+</section>
 <section class="container content-section text-center">
 <!--    <h2> USER DASHBOARD</h2>
 -->    <div class="row">
@@ -65,7 +142,101 @@
 </div>
 
 </div>
+
 <div class="clear"></div>
+<section class="container content-section">
+  <div class="panel panel-primary" style="margin-bottom: 0px !important;">
+    <div class="panel-heading text-left"  style="background-color: #008cc9 !important;">MY JOB BOARD</div>
+    <div class="panel-body" style="padding: 30px 15px 30px 15px;">
+    <div style="background-color: #efefef;">
+      <div class="col-lg-3 col-md-3  text-center">
+       <table>
+         <tr>
+           <td>
+              <div style="padding: 40px; background-color:#c7cbea; float: left; width: 200px;">
+       <img src="public/images/img10.jpg"><br>
+         ACTIVITIES
+       </div> 
+           </td>
+           <td valign="center">
+              <div class="arrow-right" style="float: left; "></div>
+           </td>
+         </tr>
+       </table>
+        
+         
+
+        </div>
+
+
+
+    <div class="col-lg-3 col-md-3 text-center" >
+     <div style="font-size: 65px;color: blue">
+      0
+    </div> 
+    <div style="margin-top: 10px; margin-bottom: 30px;"><b>VIEWED </b>
+    </div>
+  </div>
+
+  <div class="col-lg-3 col-md-3 text-center" >
+   <div style="font-size: 65px;color: blue">
+     1 0
+    </div> 
+  <div style="margin-top: 10px; margin-bottom: 30px;"><b>SHORTLISTED</b>
+ 
+  </div>
+
+</div>
+
+  <div class="col-lg-3 col-md-3 text-center" >
+   <div style="font-size: 65px;color: blue">
+      50
+    </div> 
+  <div style="margin-top: 10px; margin-bottom: 30px;"><b>APPLIED</b>
+   
+  </div>
+
+</div>
+<br>
+ <div class="col-lg-3 col-md-3 text-center" >
+ <table>
+         <tr>
+           <td >
+       <div style="padding: 40px; background-color:#fcdeb1;float: left;width: 200px;">
+       <img src="public/images/img11.jpg"><br>
+         RECOMMENDED
+       </div>  
+       </td>
+       <td valign="center"> 
+        <div class="arrow-right1" style="float: left;"></div>
+        </td>
+        </tr>
+        </table>  
+    </div>
+      <div class="col-lg-3 col-md-3 text-center">
+   <div style="font-size: 65px;color: blue">
+      50
+    </div> 
+  <div style="margin-top: 10px; margin-bottom: 30px;"><b>JOBS</b>
+   
+  </div>
+
+</div>
+  <div class="col-lg-3 col-md-3 text-center" >
+   <div style="font-size: 65px;color: blue">
+      30
+    </div> 
+  <div style="margin-top: 10px; margin-bottom: 30px;"><b>EMPLOYERS</b>
+   
+  </div>
+
+</div>
+<div style="clear: both;"></div>
+</div>
+</div>
+</div>
+
+</section>
 <div class="bottom_space"></div>
 
 </div>
