Somu Madam : Dashboard design

--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -521,7 +521,7 @@
   }
   .box_size
   {
-  width:50%;margin-left:25%;
+/*  width:50%;margin-left:25%;*/
   }
   .box_space2
   {
@@ -815,7 +815,7 @@ margin-top:0px;
   }
   .box_size
   {
-  width:50%;margin-left:25%;
+/*  width:50%;margin-left:25%;*/
   }
 
   }
@@ -911,7 +911,7 @@ margin-top:0px;
   }
      .box_size
   {
-  width:70%;margin-left:15%;
+/*  width:70%;margin-left:15%;*/
   }
 
   .box1
@@ -958,7 +958,7 @@ margin-top:0px!important;
   }
        .box_size
   {
-  width:90%;margin-left:5%;
+ /* width:90%;margin-left:5%;*/
   }
 
   .box1
@@ -1009,11 +1009,11 @@ margin-top:0px!important;
   }
          .box_size
   {
-  width:90%;margin-left:5%;
+/*  width:90%;margin-left:5%;*/
   }
 	.box_size
 	{
-	width:90%!important;margin-left:5%!important;
+/*	width:90%!important;margin-left:5%!important;*/
 	}
 	.box1
 	{
@@ -1063,11 +1063,11 @@ width:77px!important;
   }
 	.box_size
 	{
-	width:98%!important;margin-left:1%!important;
+/*	width:98%!important;margin-left:1%!important;*/
 	}
 	.box_size
 	{
-	width:98%!important;margin-left:1%!important;
+/*	width:98%!important;margin-left:1%!important;*/
 	}
 	.box1
 	{
@@ -1119,7 +1119,7 @@ margin-top:20px!important;
   }
 	.box_size
 	{
-	width:90%!important;margin-left:5%!important;
+/*	width:90%!important;margin-left:5%!important;*/
 	}
 	.box1
 	{
@@ -1166,7 +1166,7 @@ margin-top:20px!important;
   }
 	.box_size
 	{
-	width:98%!important;margin-left:1%!important;
+/*	width:98%!important;margin-left:1%!important;*/
 	}
 	.box1
 	{
@@ -1217,7 +1217,7 @@ margin-top:20px!important;
   }
 	.box_size
 	{
-	width:90%!important;margin-left:5%!important;
+/*	width:90%!important;margin-left:5%!important;*/
 	}
 	.box1
 	{
@@ -1261,7 +1261,7 @@ margin-top:20px!important;
 	
 	.box_size
 	{
-	width:98%!important;margin-left:1%!important;
+/*	width:98%!important;margin-left:1%!important;*/
 	}
 	.box1
 	{
@@ -1313,7 +1313,7 @@ margin-top:10px!important;
   }
 	.box_size
 	{
-	width:90%!important;margin-left:5%!important;
+/*	width:90%!important;margin-left:5%!important;*/
 	}
 	.box1
 	{
@@ -1354,7 +1354,7 @@ margin-top:10px!important;
   }
 	.box_size
 	{
-	width:98%!important;margin-left:1%!important;
+/*	width:98%!important;margin-left:1%!important;*/
 	}
 	.box1
 	{
