--- a/templates/appHome.html
+++ b/templates/appHome.html
@@ -2,31 +2,200 @@
 
 <style type="text/css">
   .modal-sm{
-     top:25% !important;
-  }
-  .arrow-right {
+   top:25% !important;
+ }
+ .arrow-right {
   width: 0; 
   height: 0; 
-  border-top: 30px solid transparent;
-  border-bottom: 30px solid transparent;
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
   
-  border-left: 30px solid #c7cbea;
+  border-left: 20px solid #c7cbea;
 }
 .arrow-right1 {
   width: 0; 
   height: 0; 
-  border-top: 30px solid transparent;
-  border-bottom: 30px solid transparent;  
-  border-left: 30px solid #fcdeb1;
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;  
+  border-left: 20px solid #fcdeb1;
 }
+.jobboard-txt{
+  font-size: 42px;color: blue
+}
+.jobboard-box{
+   float: left;padding: 10px 5px; width: 100%; height: 100px;
+}
+  @media only screen 
+  and (min-device-width : 768px) 
+  and (max-device-width : 1024px) 
+  and (orientation : landscape) { 
+.jobboard-txt{
+  font-size: 24px;
+  }   
+}
+
+ .progress{
+    width: 100px;
+    height: 100px;
+    line-height: 150px;
+    background: none;
+    margin: 0 auto;
+    box-shadow: none;
+    position: relative;
+}
+.progress:after{
+    content: "";
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: 12px solid #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.progress > span{
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+}
+.progress .progress-left{
+    left: 0;
+}
+.progress .progress-bar{
+    width: 100%;
+    height: 100%;
+    background: none;
+    border-width: 8px;
+    border-style: solid;
+    position: absolute;
+    top: 0;
+}
+.progress .progress-left .progress-bar{
+    left: 100%;
+    border-top-right-radius: 80px;
+    border-bottom-right-radius: 80px;
+    border-left: 0;
+    -webkit-transform-origin: center left;
+    transform-origin: center left;
+}
+.progress .progress-right{
+    right: 0;
+}
+.progress .progress-right .progress-bar{
+    left: -100%;
+    border-top-left-radius: 80px;
+    border-bottom-left-radius: 80px;
+    border-right: 0;
+    -webkit-transform-origin: center right;
+    transform-origin: center right;
+    animation: loading-1 1.8s linear forwards;
+}
+.progress .progress-value{
+    width: 90%;
+    height: 90%;
+    border-radius: 50%;
+    background: #44484b;
+    font-size: 24px;
+    color: #fff;
+    line-height: 90px;
+    text-align: center;
+    position: absolute;
+    top: 5%;
+    left: 5%;
+}
+.progress.blue .progress-bar{
+    border-color: #049dff;
+}
+.progress.blue .progress-left .progress-bar{
+    animation: loading-2 1.5s linear forwards 1.8s;
+}
+.progress.yellow .progress-bar{
+    border-color: #fdba04;
+}
+.progress.yellow .progress-left .progress-bar{
+    animation: loading-3 1s linear forwards 1.8s;
+}
+.progress.pink .progress-bar{
+    border-color: #ed687c;
+}
+.progress.pink .progress-left .progress-bar{
+    animation: loading-4 0.4s linear forwards 1.8s;
+}
+.progress.green .progress-bar{
+    border-color: #1abc9c;
+}
+.progress.green .progress-left .progress-bar{
+    animation: loading-5 1.2s linear forwards 1.8s;
+}
+@keyframes loading-1{
+    0%{
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100%{
+        -webkit-transform: rotate(180deg);
+        transform: rotate(180deg);
+    }
+}
+@keyframes loading-2{
+    0%{
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100%{
+        -webkit-transform: rotate(144deg);
+        transform: rotate(144deg);
+    }
+}
+@keyframes loading-3{
+    0%{
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100%{
+        -webkit-transform: rotate(90deg);
+        transform: rotate(90deg);
+    }
+}
+@keyframes loading-4{
+    0%{
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100%{
+        -webkit-transform: rotate(36deg);
+        transform: rotate(36deg);
+    }
+}
+@keyframes loading-5{
+    0%{
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100%{
+        -webkit-transform: rotate(126deg);
+        transform: rotate(126deg);
+    }
+}
+@media only screen and (max-width: 990px){
+    .progress{ margin-bottom: 20px; }
+}
+
 </style>
 <!-- About Section -->
 
-<section class="container content-section">
+
+<section class="container content-section text-center">
+<div class="row">
+<div class="col-lg-3 col-md-3 text-center" style="padding-top: 5px;" >
+  
   <div class="panel panel-primary" style="margin-bottom: 0px !important;">
-    <div class="panel-heading"  style="background-color: #008cc9 !important;">PROFILE INSIGHTS</div>
-    <div class="panel-body" style="padding: 30px 15px 0px 15px;">
-      <div class="col-lg-4 col-md-4 text-center" >
+    <div class="panel-heading"  style="background-color: #008cc9 !important; padding: 0px !important;">PROFILE INSIGHTS</div>
+    <div class="panel-body"  style="padding-bottom: 3px !important;">
+      <div class="text-center" >
        <div >
         <div class="progress blue">
           <span class="progress-left">
@@ -38,13 +207,13 @@
           <div class="progress-value">{{percentage}}% </div>
         </div> 
       </div>   
-       <div style="margin-top: 10px; margin-bottom: 30px;"><b>PROFILE COMPLETE</b>
+       <div style="margin-bottom: 8px;"><b>PROFILE COMPLETE</b>
         <br>Update your profile to <br>increase your score.
       </div>   
     </div>
 
 
-    <div class="col-lg-4 col-md-4 text-center" >
+    <div class="text-center" >
      <div>
       <div class="progress blue">
         <span class="progress-left">
@@ -56,12 +225,12 @@
         <div class="progress-value">20% </div>
       </div> 
     </div> 
-    <div style="margin-top: 10px; margin-bottom: 30px;"><b>VIEWED BY RECRUITER</b>
+    <div style=" margin-bottom: 8px;"><b>VIEWED BY RECRUITER</b>
       <br>Update your profile to <br>increase your score.
     </div>
   </div>
 
-  <div class="col-lg-4 col-md-4 text-center" >
+  <div class="text-center" >
    <div  >
     <div class="progress blue" align="center">
       <span class="progress-left">
@@ -73,7 +242,7 @@
       <div class="progress-value">10% </div>
     </div> 
   </div> 
-  <div style="margin-top: 10px; margin-bottom: 30px;"><b>JOBS APPLIED</b>
+  <div><b>JOBS APPLIED</b>
     <br>Update your profile to <br>increase your score.
   </div>
 
@@ -82,31 +251,31 @@
 </div>
 </div>
 
-</section>
-<section class="container content-section text-center">
-<!--    <h2> USER DASHBOARD</h2>
--->    <div class="row">
-      
-     <div class="box_size" align="center">
-        <div class="box_space">
-         <div class="box_inner" ng-click="go_to_following('following_me')">
-            <div class="box1" style="border:4px solid #ef3f61;color:#ef3f61;text-align:center;">
-            <div><span class="big_text">{{company_following_user_list.length}}</span> New Followers!</div>
-        
-           <div align="center" style="margin-top:30px;"><img src="public/images/newfollower.png" class="icon_size"></div>
-        </div>
-    </div>
 </div>
-<div style="width:2%;float:left;"></div>
-<div class="box_space">
- <div class="box_inner" ng-click="go_to_not_viewed_jobs('myjobs')">
-   <div class="box1" style="border:4px solid #ffc900;text-align:center;color:#ffc900;">
-<!--    <div><span class="big_text">{{not_viewed_jobs_for_user_list.length}}</span> Unviewed Suggested Jobs.</div>-->  
-<div><span class="big_text">{{matching_jobs_for_user_unfollow_list.length}}</span> New Job Matches!</div>
+<div class="col-lg-6 col-md-6 text-center" >
+<div>
+  <div class="row">
 
- <div align="center" style="margin-top:30px;"><img src="public/images/talentmatch.png" class="icon_size"></div>
-</div>
-</div>
+   <div class="box_size" align="center">
+    <div class="box_space">
+     <div class="box_inner" ng-click="go_to_following('following_me')">
+      <div class="box1" style="border:4px solid #ef3f61;color:#ef3f61;text-align:center;">
+        <div><span class="big_text">{{company_following_user_list.length}}</span> New Followers!</div>
+        
+        <div align="center" style="margin-top:30px;"><img src="public/images/newfollower.png" class="icon_size"></div>
+      </div>
+    </div>
+  </div>
+  <div style="width:2%;float:left;"></div>
+  <div class="box_space">
+   <div class="box_inner" ng-click="go_to_not_viewed_jobs('myjobs')">
+     <div class="box1" style="border:4px solid #ffc900;text-align:center;color:#ffc900;">
+      <!--    <div><span class="big_text">{{not_viewed_jobs_for_user_list.length}}</span> Unviewed Suggested Jobs.</div>-->  
+      <div><span class="big_text">{{matching_jobs_for_user_unfollow_list.length}}</span> New Job Matches!</div>
+
+      <div align="center" style="margin-top:30px;"><img src="public/images/talentmatch.png" class="icon_size"></div>
+    </div>
+  </div>
 </div>
 
 
@@ -116,17 +285,17 @@
 
 
 <div class="row">
-   
-     <div class="box_size" align="center">
-    <div class="box_space">
-     <div class="box_inner"  ng-click="go_to_following('notviewed')" >
-       <div class="box1"  style="border:4px solid #00b5f8;text-align:center;color:#00b5f8;">
-<!--        <div>You have <span class="big_text">{{not_viewed_company_for_user_list.length}}</span> Unviewed Suggested Employers!</div>-->         
-<div><span class="big_text"> {{not_viewed_company_for_user_list.length}} </span> New Employer Matches!</div>
 
-        <div align="center"><img src="public/images/newapplicant.png" class="icon_size"></div>
+ <div class="box_size" align="center">
+  <div class="box_space">
+   <div class="box_inner"  ng-click="go_to_following('notviewed')" >
+     <div class="box1"  style="border:4px solid #00b5f8;text-align:center;color:#00b5f8;">
+      <!--        <div>You have <span class="big_text">{{not_viewed_company_for_user_list.length}}</span> Unviewed Suggested Employers!</div>-->         
+      <div><span class="big_text"> {{not_viewed_company_for_user_list.length}} </span> New Employer Matches!</div>
+
+      <div align="center"><img src="public/images/newapplicant.png" class="icon_size"></div>
     </div>
-</div>
+  </div>
 </div>
 <div style="width:2%;float:left;"></div>
 <div class="box_space">
@@ -135,7 +304,7 @@
     <div> <a href="#!/user/user-job" style="color:#00ffff!important;"><span class="big_text">{{matching_jobs_for_user_list.length}}</span> Active Watch List Jobs! </a>
     </div>
     <div align="center" class="img_position"><img src="public/images/activejob.png" class="icon_size"></div>
-</div>
+  </div>
 </div>
 
 
@@ -144,101 +313,86 @@
 </div>
 
 <div class="clear"></div>
-<section class="container content-section">
+
+<div class="bottom_space"></div>
+
+</div>
+</div>
+</div>
+<div class="col-lg-3 col-md-3 text-center" style="padding-top: 5px;">
+  
+
   <div class="panel panel-primary" style="margin-bottom: 0px !important;">
-    <div class="panel-heading text-left"  style="background-color: #008cc9 !important;">MY JOB BOARD</div>
-    <div class="panel-body" style="padding: 30px 15px 30px 15px;">
-    <div style="background-color: #efefef;">
-      <div class="col-lg-3 col-md-3  text-center">
-       <table>
+    <div class="panel-heading text-center"  style="background-color: #008cc9 !important;padding: 0px !important;">MY JOB BOARD</div>
+    <div class="panel-body"  style="padding: 0px !important;">
+    <div style="background-color: #efefef; padding: 24px 5px;">
+      <div class="text-center">
+       <table align="center" width="100%">
          <tr>
-           <td>
-              <div style="padding: 40px; background-color:#c7cbea; float: left; width: 200px;">
-       <img src="public/images/img10.jpg"><br>
-         ACTIVITIES
-       </div> 
+           <td width="55%">
+            <div class="jobboard-box" style="background-color:#c7cbea;">
+             <img src="public/images/img10.jpg"><br>
+             ACTIVITIES
+           </div> 
+         </td>
+         <td valign="center" width="5%">
+          <div class="arrow-right"></div>
+        </td>
+        <td align="center" width="40%" valign="top">
+         <div class="jobboard-txt"> 1233</div> 
+         <div><b>VIEWED </b></div>
+       </td>
+     </tr>
+     <tr><td colspan="3" height="20">&nbsp;</td></tr>
+      <tr>
+            
+           <td align="center" valign="top">
+             <div class="jobboard-txt"> 45 </div> 
+              <div><b>SHORTLISTED </b></div>
            </td>
-           <td valign="center">
-              <div class="arrow-right" style="float: left; "></div>
+            <td></td>
+           <td align="center" width="40%" valign="top">
+             <div class="jobboard-txt"> 120 </div> 
+              <div><b>APPLIED </b></div>
            </td>
          </tr>
-       </table>
-        
-         
-
-        </div>
-
-
-
-    <div class="col-lg-3 col-md-3 text-center" >
-     <div style="font-size: 65px;color: blue">
-      0
-    </div> 
-    <div style="margin-top: 10px; margin-bottom: 30px;"><b>VIEWED </b>
-    </div>
-  </div>
-
-  <div class="col-lg-3 col-md-3 text-center" >
-   <div style="font-size: 65px;color: blue">
-     1 0
-    </div> 
-  <div style="margin-top: 10px; margin-bottom: 30px;"><b>SHORTLISTED</b>
- 
-  </div>
-
-</div>
-
-  <div class="col-lg-3 col-md-3 text-center" >
-   <div style="font-size: 65px;color: blue">
-      50
-    </div> 
-  <div style="margin-top: 10px; margin-bottom: 30px;"><b>APPLIED</b>
-   
-  </div>
-
-</div>
-<br>
- <div class="col-lg-3 col-md-3 text-center" >
- <table>
-         <tr>
-           <td >
-       <div style="padding: 40px; background-color:#fcdeb1;float: left;width: 200px;">
-       <img src="public/images/img11.jpg"><br>
-         RECOMMENDED
-       </div>  
-       </td>
-       <td valign="center"> 
-        <div class="arrow-right1" style="float: left;"></div>
+<tr><td colspan="3" height="60">&nbsp;</td></tr>
+           <tr>
+           <td>
+            <div class="jobboard-box" style="background-color:#fcdeb1;">
+             <img src="public/images/img11.jpg"><br>
+             RECOMMENDED
+           </div> 
+         </td>
+         <td valign="center">
+          <div class="arrow-right1" ></div>
         </td>
-        </tr>
-        </table>  
-    </div>
-      <div class="col-lg-3 col-md-3 text-center">
-   <div style="font-size: 65px;color: blue">
-      50
-    </div> 
-  <div style="margin-top: 10px; margin-bottom: 30px;"><b>JOBS</b>
-   
-  </div>
+        <td align="center" width="40%" valign="top">
+         <div class="jobboard-txt"> 3870 </div> 
+         <div><b>JOBS </b></div>
+       </td>
+     </tr>
+     <tr><td colspan="3" height="20">&nbsp;</td></tr>
+      <tr>            
+     <td align="center" valign="top">
+       <div class="jobboard-txt"> 78955 </div> 
+        <div><b>EMPLOYERS </b></div>
+     </td>             
+          
+    </tr>
+   </table> 
 
-</div>
-  <div class="col-lg-3 col-md-3 text-center" >
-   <div style="font-size: 65px;color: blue">
-      30
-    </div> 
-  <div style="margin-top: 10px; margin-bottom: 30px;"><b>EMPLOYERS</b>
-   
-  </div>
-
-</div>
+ </div>
+ 
+  
 <div style="clear: both;"></div>
 </div>
 </div>
 </div>
 
-</section>
-<div class="bottom_space"></div>
-
+ 
 </div>
+</div>
+<div style="height: 100px;"></div>
 </section>
-<div ng-include="'include/bottom.html'"></div>
+<!-- <div ng-include="'include/bottom.html'"></div> -->
