--- a/templates/profile.html
+++ b/templates/profile.html
@@ -71,7 +71,7 @@
     top: 5%;
     left: 5%;
 }
-.progress.blue .progress-bar{
+/*.progress.blue .progress-bar{
     border-color: #049dff;
 }
 .progress.blue .progress-left .progress-bar{
@@ -94,7 +94,7 @@
 }
 .progress.green .progress-left .progress-bar{
     animation: loading-5 1.2s linear forwards 1.8s;
-}
+}*/
 @keyframes loading-1{
     0%{
         -webkit-transform: rotate(0deg);
